--- a/src/tunnelvision/stories/demo.yaml
+++ b/src/tunnelvision/stories/demo.yaml
@@ -1,26 +1,25 @@
 ---
-_include:
-  other_demo: demo/demo_1.yaml
+_vars:
+  - curr_garden_plot: garden_plot_1
+  - garden_plot_1: tomato
+  - counter: 0
 _content:
-  - Hello, World!
+  - Hello, Lizzy.
   - choice: good
     effects:
-      - goto: good
+      - You made a good choice.
   - choice: bad
     effects:
-      - You made a bad choice, you should feel bad!
-      - choice: good
-bad:
-  - hello
-good:
+      - You made a bad choice.
+  - set: counter += 1
+  - goto: hello
+hello:
   _vars:
-    - coin: 100
-  _include:
-    other_demo: demo/demo_1.yaml
+    - counter: 0
   _content:
-    - You made a good choice!
-    - "{coin}"
-    - goto: bad
-  bad:
+    - "{counter}"
+    - goto: bye
+  bye:
     _content:
-      - Hello
+      - Bye
+      - "{counter}"
